# ok

./: .editorconfig  .env.example  .gitignore  .golangci.yml  .goreleaser.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE  OK.md  README.md  README.zh-CN.md  REASONIX.md  SECURITY.md  build-cli.bat  build.bat  build_desktop.bat  build_tmp.bat  go.mod  go.sum  ok.example.toml
.github/: CONTRIBUTING.md  SECURITY.md  dependabot.yml  pull_request_template.md
.ok/: semantic-index.json
cmd/ok/: main.go  (+1 more)
deploy/: .env.example  Dockerfile  README.md  docker-compose.yml
desktop/: .gitignore  README.md  app.go  build_desktop_full.bat  desktop_test.go  dotenv.go  go.mod  go.sum  main.go  sessions.go  settings_app.go  tray_stub.go  tray_windows.go  wails.json  wire.go  workspace.go
docs/: ARCH-AUDIT-20260620.md  CNAME  DST_KERNEL_DESIGN.md  DST_LITE_DESIGN.md  DSTv2_DESIGN.md  KERNEL_LOGIC.md  MIGRATING.md  OK-VERIFY.md  PLUGIN-DEV.md  PROVIDERS.md  SKILLS.md  SPEC.md  example-skills.json  index.html  mobile-architecture-v1.md
npm/: build.mjs  package.json
plugins/: Makefile
prompts/: system.md
scripts/: genicon.go  install.bat  install.js  install.sh  ok.rb  package.json  release.sh  strip_schema_desc.go
sdk/python/: README.md  pyproject.toml
sdk/python/docs/: api.rst  conf.py  examples.rst  index.rst  quickstart.rst
sdk/python/examples/: basic.py  ok_agent_demo.ipynb
sdk/python/ok/: __init__.py  async_client.py  client.py  events.py  exceptions.py  transport.py  transport_ws.py
sdk/python/tests/: test_sdk.py
(+649 files in other folders)
