[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ok-sdk"
version = "0.1.0"
description = "Python SDK for OK Agent — connect, submit, and stream events from any OK agent instance"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "OK Team"},
]
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
ws = ["websocket-client>=1.6.0"]
all = ["ok-sdk[ws]"]
keywords = ["agent", "llm", "ai", "mcp", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/ok/ok"
Documentation = "https://github.com/ok/ok#readme"

[tool.setuptools.packages.find]
include = ["ok*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py39"
